--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 				<p>
 					<b>Request Robin</b><br/>
 					<blockquote>
-						A fullscale client for Request Tracker, seemlessly integrates with google groups to provide a smooth and effective workplace ticketing systems. Contact for details.
+						A fullscale client for Request Tracker, seemlessly integrates with google groups to provide a smooth and effective workplace ticketing system. Contact for details.
 					</blockquote>
 				</p>
 			</center>
@@ -261,7 +261,7 @@
 
 		<h2>Contact</h2>
 		<p>
-			Feel free to contact me for information or quotes at: <a href="mailto:AaronKovacsDev@gmail.com">AaronKovacsDev@gmail.com</a>
+			Feel free to contact me for more information or quotes at: <a href="mailto:AaronKovacsDev@gmail.com">AaronKovacsDev@gmail.com</a>
 		</p>
 	</div>
 
