Updates for STAP Tickets & FGB

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 				<p>
 					<b>Friend Game Buzzer</b><br/>
 					<blockquote style="margin-right: 10px;">
-						Friend Game Buzzer is the perfect app to manage your next trivia night. One person can host up to 14 other contestants who can buzz in during questions.
+						Friend Game Buzzer is the perfect app to manage your next trivia night. One person can host up to 64 other contestants who can buzz in during questions.
 					</blockquote>
 				</p>
 			</center>
@@ -227,9 +227,9 @@
 			</div>
 			<center>
 				<p>
-					<b>Request Robin</b><br/>
+					<b>STAP Tickets</b><br/>
 					<blockquote>
-						A fullscale client for Request Tracker, seemlessly integrates with google groups to provide a smooth and effective workplace ticketing system. Contact for details.
+						A fullscale client for Request Tracker, seemlessly integrates with google groups to provide a smooth and effective workplace ticketing system.
 					</blockquote>
 				</p>
 			</center>
