Added line to STAP Tickets

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 				<p>
 					<b>STAP Tickets</b><br/>
 					<blockquote>
-						A fullscale client for Request Tracker, seemlessly integrates with google groups to provide a smooth and effective workplace ticketing system.
+						A fullscale client for Request Tracker, seemlessly integrates with google groups to provide a smooth and effective workplace ticketing system with you at all times.
 					</blockquote>
 				</p>
 			</center>
