Added BASD Echo app
Various tweaks to content including AppStore links.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 		}
 		
 		a {
-			color: #3e63ff;
+			color: #6ea3f4;
 			text-decoration: none;
 		}
 		
@@ -141,7 +141,7 @@
 			    align-self: center;
 			}
 			.containerRight {
-			    margin-left: 50%;
+			    margin-left: 52%;
 			    width: 50%;
 			    float: none;
 			}
@@ -184,21 +184,23 @@
 				<p>
 					<b>Comet for reddit</b><br/>
 					<blockquote style="margin-right: 10px;">
-						A fast and robust reddit client that covers all Reddit's extensive features. Developed by Aaron Kovacs and designed by Ciaran Robrien, coming this summer.
+						A fast and robust reddit client with a beautiful design. Currently in open beta on r/Comet.
+						<br/><br/><a href="https://testflight.apple.com/join/AShWXMYH">Join Beta</a>
 					</blockquote>
 				</p>
 			</center>
 		</div>
 		<div class="containerRight">
-			<img src="./ScreenPlay.png" width="80" height="80" /><br/>
+			<img src="./BASDEcho.png" width="80" height="80" /><br/>
 			<div>
-				<img class="screenshot" src="./ScreenPlayScreenshot.jpg"/>
+				<img class="screenshot" src="./BASDEchoScreenshot.jpg"/>
 			</div>
 			<center>
 				<p>
-					<b>Screenplay</b><br/>
+					<b>BASD Echo</b><br/>
 					<blockquote>
-						A watershed app that gathers data about movies and TV from across the internet into a single easily digested feed. Spend less time looking and more time watching.
+						The school newspaper reimagined. Currently available on the AppStore with new issues every monday.
+						<br/><br/><a href="https://itunes.apple.com/us/app/basd-echo/id1438468307?ls=1&mt=8">View on AppStore</a>
 					</blockquote>
 				</p>
 			</center>
@@ -206,30 +208,32 @@
 	</div>
 
 	<div class="container">
-		<div class="containerLeft">
+        <div class="containerLeft">
+            <img src="./ScreenPlay.png" width="80" height="80" /><br/>
+            <div>
+                <img class="screenshot" src="./ScreenPlayScreenshot.png"/>
+            </div>
+            <center>
+                <p>
+                    <b>Queued</b><br/>
+                    <blockquote style="margin-right: 10px;">
+                        A watershed app that gathers data about movies and TV from across the internet into a single easily digested feed. Spend less time looking and more time watching.
+						<br/><br/><a href="https://itunes.apple.com/us/app/queued-movie-and-tv-watchlist/id1445325036?ls=1&mt=8">View on AppStore</a>
+					</blockquote>
+                </p>
+            </center>
+        </div>
+		<div class="containerRight">
 			<img src="./GameBuzzer.png" width="80" height="80" /><br/>
 			<div>
-				<img class="screenshot" src="./GameBuzzerScreenshot.jpg"/>
+				<img class="screenshot" src="./GameBuzzerScreenshot.png"/>
 			</div>
 			<center>
 				<p>
 					<b>Friend Game Buzzer</b><br/>
-					<blockquote style="margin-right: 10px;">
-						Friend Game Buzzer is the perfect app to manage your next trivia night. One person can host up to 64 other contestants who can buzz in during questions.
-					</blockquote>
-				</p>
-			</center>
-		</div>
-		<div class="containerRight">
-			<img src="./RequestRobin.png" width="80" height="80" /><br/>
-			<div>
-				<img class="screenshot" src="./RequestRobinScreenshot.png"/>
-			</div>
-			<center>
-				<p>
-					<b>STAP Tickets</b><br/>
 					<blockquote>
-						A fullscale client for Request Tracker, seemlessly integrates with google groups to provide a smooth and effective workplace ticketing system with you at all times.
+						Friend Game Buzzer is the perfect app to manage your next trivia night. One person can host up to 64 other contestants who can buzz in during questions. Currently has over <b>70k</b> downloads!
+						<br/><br/><a href="https://itunes.apple.com/us/app/friend-game-buzzer/id1303196209?ls=1&mt=8">View on AppStore</a>
 					</blockquote>
 				</p>
 			</center>
@@ -237,7 +241,22 @@
 	</div>
 
 	<div class="container">
-		<div class="containerLeft">
+        <div class="containerLeft">
+            <img src="./RequestRobin.png" width="80" height="80" /><br/>
+            <div>
+                <img class="screenshot" src="./RequestRobinScreenshot.png"/>
+            </div>
+            <center>
+                <p>
+                    <b>STAP Tickets</b><br/>
+                    <blockquote style="margin-right: 10px;">
+                        A fullscale client for Request Tracker, seemlessly integrates with google groups to provide a smooth and effective workplace ticketing system.
+						<br/><br/><a href="https://itunes.apple.com/us/app/stap-tickets/id1244763348?ls=1&mt=8">View on AppStore</a>
+					</blockquote>
+                </p>
+            </center>
+        </div>
+		<div class="containerRight">
 			<img src="./PenaltyBox.png" width="80" height="80" /><br/>
 			<div>
 				<img class="screenshot" src="./PenaltyBoxScreenshot.png"/>
@@ -245,23 +264,22 @@
 			<center>
 				<p>
 					<b>Penalty Box</b><br/>
-					<blockquote style="margin-right: 10px;">
+					<blockquote>
 						Fast and smooth gesture-based player penalty end time calculation. Commision for local hockey referees and coaches.
+						<br/><br/><a href="https://itunes.apple.com/us/app/penalty-box-calculator/id1180857716?ls=1&mt=8">View on AppStore</a>
 					</blockquote>
 				</p>
 			</center>
 		</div>
 	</div>
 
-	<div style="clear:both;">
-		<h2 style="padding-top: 32px;">Technologies</h2>
-		<p>
-			I have a focus on high quality iOS apps for iPhone and iPad usually coupled with a scalable server. I am fluent in Python, with a target at data analysis and API wrappers. 
+	<div style="padding-top: 32px; padding-bottom: 8px; clear:both;">
+		<p style="text-align: center;">
+			Feel free to contact me for more information or quotes at: <a href="mailto:AaronKovacsDev@gmail.com">AaronKovacsDev@gmail.com</a>
 		</p>
 
-		<h2>Contact</h2>
-		<p>
-			Feel free to contact me for more information or quotes at: <a href="mailto:AaronKovacsDev@gmail.com">AaronKovacsDev@gmail.com</a>
+		<p style="padding-top: 0px; text-align: center;">
+			Check out some of my projects over on <a href="https://github.com/AaronKovacs">Github</a>
 		</p>
 	</div>
 
