--- a/index.html
+++ b/index.html
@@ -184,8 +184,10 @@
 				<p>
 					<b>Comet for reddit</b><br/>
 					<blockquote style="margin-right: 10px;">
-						A fast and robust reddit client with a beautiful design. Currently in open beta on r/Comet.
-						<br/><br/><a href="https://testflight.apple.com/join/AShWXMYH">Join Beta</a>
+						A fast and robust reddit client with a beautiful design. 
+						<br/><br/><a href="https://itunes.apple.com/us/app/comet-for-reddit/id1146204813?ls=1&mt=8">View on App Store</a>
+                        <br/><a href="https://cometreddit.app/">Promotional Website</a>
+
 					</blockquote>
 				</p>
 			</center>
@@ -199,8 +201,9 @@
 				<p>
 					<b>BASD Echo</b><br/>
 					<blockquote>
-						The school newspaper reimagined. Currently available on the AppStore with new issues every monday.
-						<br/><br/><a href="https://itunes.apple.com/us/app/basd-echo/id1438468307?ls=1&mt=8">View on AppStore</a>
+						The school newspaper reimagined. Currently available on the App Store with new issues every monday.
+						<br/><br/><a href="https://echo.basd.k12.pa.us/">Website</a>
+                        <br/><a href="https://itunes.apple.com/us/app/basd-echo/id1438468307?ls=1&mt=8">View on App Store</a>
 					</blockquote>
 				</p>
 			</center>
@@ -218,7 +221,7 @@
                     <b>Queued</b><br/>
                     <blockquote style="margin-right: 10px;">
                         A watershed app that gathers data about movies and TV from across the internet into a single easily digested feed. Spend less time looking and more time watching.
-						<br/><br/><a href="https://itunes.apple.com/us/app/queued-movie-and-tv-watchlist/id1445325036?ls=1&mt=8">View on AppStore</a>
+						<br/><br/><a href="https://itunes.apple.com/us/app/queued-movie-and-tv-watchlist/id1445325036?ls=1&mt=8">View on App Store</a>
 					</blockquote>
                 </p>
             </center>
@@ -233,7 +236,7 @@
 					<b>Friend Game Buzzer</b><br/>
 					<blockquote>
 						Friend Game Buzzer is the perfect app to manage your next trivia night. One person can host up to 64 other contestants who can buzz in during questions. Currently has over <b>70k</b> downloads!
-						<br/><br/><a href="https://itunes.apple.com/us/app/friend-game-buzzer/id1303196209?ls=1&mt=8">View on AppStore</a>
+						<br/><br/><a href="https://itunes.apple.com/us/app/friend-game-buzzer/id1303196209?ls=1&mt=8">View on App Store</a>
 					</blockquote>
 				</p>
 			</center>
@@ -251,7 +254,7 @@
                     <b>STAP Tickets</b><br/>
                     <blockquote style="margin-right: 10px;">
                         A fullscale client for Request Tracker, seemlessly integrates with google groups to provide a smooth and effective workplace ticketing system.
-						<br/><br/><a href="https://itunes.apple.com/us/app/stap-tickets/id1244763348?ls=1&mt=8">View on AppStore</a>
+						<br/><br/><a href="https://itunes.apple.com/us/app/stap-tickets/id1244763348?ls=1&mt=8">View on App Store</a>
 					</blockquote>
                 </p>
             </center>
@@ -266,7 +269,7 @@
 					<b>Penalty Box</b><br/>
 					<blockquote>
 						Fast and smooth gesture-based player penalty end time calculation. Commision for local hockey referees and coaches.
-						<br/><br/><a href="https://itunes.apple.com/us/app/penalty-box-calculator/id1180857716?ls=1&mt=8">View on AppStore</a>
+						<br/><br/><a href="https://itunes.apple.com/us/app/penalty-box-calculator/id1180857716?ls=1&mt=8">View on App Store</a>
 					</blockquote>
 				</p>
 			</center>
