--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 	</div>
 
 	<p style="text-indent: 50px;">
-		I am a freelance iOS and web developer based out of Pittsburgh, Pennslyvania. I code out of passion and strive to make useful and unique apps above all else.
+		I am a freelance iOS and web developer based out of Pittsburgh, Pennslyvania. I code out of passion and strive to make useful and unique apps.
 	</p>
 
 	<div class="container">
