Updated profile picture

--- a/index.html
+++ b/index.html
@@ -97,18 +97,18 @@
 		
 
 		.blankIcon {
-    		border-radius: 25%;
-    		background-color: #EFEFEF;
+			border-radius: 25%;
+			background-color: #EFEFEF;
 		}
 
 		.blankScreenshot {
-    		border-radius: 8px;
-    		background-color: #EFEFEF;
+			border-radius: 8px;
+			background-color: #EFEFEF;
 		}
 
 		.container {
-		    width: 100%;
-		    margin: auto;
+			width: 100%;
+			margin: auto;
 		}	
 
 		.containerLeft {
@@ -127,23 +127,23 @@
 
 		.screenshot {
 			border: 0.5px solid #d2d2d4;
-    		border-radius: 8px;
-    		width: 100%;
+			border-radius: 8px;
+			width: 100%;
 
 		}
 
 
 		@media only screen and (min-width: 690px) {
 			.containerLeft {
-			    width: 50%;
-			    
-			    float: left;
-			    align-self: center;
+				width: 50%;
+				
+				float: left;
+				align-self: center;
 			}
 			.containerRight {
-			    margin-left: 52%;
-			    width: 50%;
-			    float: none;
+				margin-left: 52%;
+				width: 50%;
+				float: none;
 			}
 
 			img {
@@ -152,7 +152,7 @@
 
 			.screenshot {
 				width: auto;
-    			height: 600px;
+				height: 600px;
 			}
 
 		}
@@ -171,7 +171,7 @@
 	</div>
 
 	<p style="text-indent: 50px;">
-		I am a freelance iOS and web developer based out of Pittsburgh, Pennslyvania. I code out of passion and strive to make useful and unique apps.
+		I am a freelance iOS, web, and backend developer based out of Washington, D.C. I code out of passion and strive to make all my work the best it can be.
 	</p>
 
 	<div class="container">
@@ -186,7 +186,7 @@
 					<blockquote style="margin-right: 10px;">
 						A fast and robust reddit client with a beautiful design. 
 						<br/><br/><a href="https://itunes.apple.com/us/app/comet-for-reddit/id1146204813?ls=1&mt=8">View on App Store</a>
-                        <br/><a href="https://cometreddit.app/">Promotional Website</a>
+						<br/><a href="https://cometreddit.app/">Promotional Website</a>
 
 					</blockquote>
 				</p>
@@ -203,7 +203,7 @@
 					<blockquote>
 						The school newspaper reimagined. Currently available on the App Store with new issues every monday.
 						<br/><br/><a href="https://echo.basd.k12.pa.us/">Website</a>
-                        <br/><a href="https://itunes.apple.com/us/app/basd-echo/id1438468307?ls=1&mt=8">View on App Store</a>
+						<br/><a href="https://itunes.apple.com/us/app/basd-echo/id1438468307?ls=1&mt=8">View on App Store</a>
 					</blockquote>
 				</p>
 			</center>
@@ -211,21 +211,21 @@
 	</div>
 
 	<div class="container">
-        <div class="containerLeft">
-            <img src="./ScreenPlay.png" width="80" height="80" /><br/>
-            <div>
-                <img class="screenshot" src="./ScreenPlayScreenshot.png"/>
-            </div>
-            <center>
-                <p>
-                    <b>Queued</b><br/>
-                    <blockquote style="margin-right: 10px;">
-                        A watershed app that gathers data about movies and TV from across the internet into a single easily digested feed. Spend less time looking and more time watching.
+		<div class="containerLeft">
+			<img src="./ScreenPlay.png" width="80" height="80" /><br/>
+			<div>
+				<img class="screenshot" src="./ScreenPlayScreenshot.png"/>
+			</div>
+			<center>
+				<p>
+					<b>Queued</b><br/>
+					<blockquote style="margin-right: 10px;">
+						A watershed app that gathers data about movies and TV from across the internet into a single easily digested feed. Spend less time looking and more time watching.
 						<br/><br/><a href="https://itunes.apple.com/us/app/queued-movie-and-tv-watchlist/id1445325036?ls=1&mt=8">View on App Store</a>
 					</blockquote>
-                </p>
-            </center>
-        </div>
+				</p>
+			</center>
+		</div>
 		<div class="containerRight">
 			<img src="./GameBuzzer.png" width="80" height="80" /><br/>
 			<div>
@@ -244,21 +244,21 @@
 	</div>
 
 	<div class="container">
-        <div class="containerLeft">
-            <img src="./RequestRobin.png" width="80" height="80" /><br/>
-            <div>
-                <img class="screenshot" src="./RequestRobinScreenshot.png"/>
-            </div>
-            <center>
-                <p>
-                    <b>STAP Tickets</b><br/>
-                    <blockquote style="margin-right: 10px;">
-                        A fullscale client for Request Tracker, seemlessly integrates with google groups to provide a smooth and effective workplace ticketing system.
+		<div class="containerLeft">
+			<img src="./RequestRobin.png" width="80" height="80" /><br/>
+			<div>
+				<img class="screenshot" src="./RequestRobinScreenshot.png"/>
+			</div>
+			<center>
+				<p>
+					<b>STAP Tickets</b><br/>
+					<blockquote style="margin-right: 10px;">
+						A fullscale client for Request Tracker, seemlessly integrates with google groups to provide a smooth and effective workplace ticketing system.
 						<br/><br/><a href="https://itunes.apple.com/us/app/stap-tickets/id1244763348?ls=1&mt=8">View on App Store</a>
 					</blockquote>
-                </p>
-            </center>
-        </div>
+				</p>
+			</center>
+		</div>
 		<div class="containerRight">
 			<img src="./PenaltyBox.png" width="80" height="80" /><br/>
 			<div>
