--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<meta property="og:site_name" content="Aaron Kovacs">
 	<meta property="og:title" content="Aaron Kovacs" />
 	<meta property="og:description" content="Freelance iOS and Web Developer" />
+	<meta property="og:image" content="./Profile.jpg" />
+	<meta property="og:image:type" content="image/jpeg" />
 	
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" value="Aaron Kovacs" />
