--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	<meta property="og:title" content="Aaron Kovacs" />
 	<meta property="og:description" content="Freelance iOS and Web Developer" />
 	<meta property="og:image" content="./Profile.jpg" />
+	<meta property="og:image:width" content="594" />
+	<meta property="og:image:height" content="594" />
 	<meta property="og:image:type" content="image/jpeg" />
 	
 	<meta name="twitter:card" content="summary_large_image">
