--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 	</div>
 
 	<p style="text-indent: 50px;">
-		I am a freelance iOS, web, and backend developer based out of Washington, D.C. I code out of passion and strive to make all my work the best it can be.
+		I am a freelance iOS, web, and backend developer based out of Washington, D.C.
 	</p>
 
 	<div class="container">
