--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@ body {
 
         <div class="bookshlf-container">
             <div style="flex: 0 0 50%; height: 100%;">
-                <img src="./BookshlfScreenshot.png" class="bookshlf-screenshot" />
+                <img src="./BookshlfScreenshot.jpg" class="bookshlf-screenshot" />
             </div>
 
             <div class="title-card">
@@ -946,7 +946,7 @@ body {
                     </div>
                 </div>
                 <div>
-                    <img class="screenshot" src="./ScreenPlayScreenshot.png"/>
+                    <img class="screenshot" src="./ScreenPlayScreenshot.jpg"/>
                 </div>
                 <center>
                     <p>
