--- a/index.html
+++ b/index.html
@@ -669,6 +669,10 @@ body {
 
 @media only screen and (max-width: 600px) {
 
+    .college-card-pretitle {
+        font-size: 10pt; 
+    }
+
     .mobile-collapse-space {
         margin-top: 5em;
     }
