--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@ body {
 <body>
     <div class="white-header"></div>
     <div class="header-container">
-        <div class="profile-img-container">
+        <div class="profile-img-container" style="display: none;">
             <img class="profile" src="./Profile.jpg" />
         </div>
         <div class="real-name-container">
