--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
         }
 
         body {
-           font-family: 'Varela Round', sans-serif;
-           max-width: 600px;
-           margin: 0 auto;
-           padding: 0px 20px 40px 20px;
-           font-size: 1.1em;
-           line-height: 1.6em;
-           color: #000;
-       }
+         font-family: 'Varela Round', sans-serif;
+         max-width: 600px;
+         margin: 0 auto;
+         padding: 0px 20px 40px 20px;
+         font-size: 1.1em;
+         line-height: 1.6em;
+         color: #000;
+     }
 
-       .profile {
+     .profile {
         border-radius: 50%;
         margin-left: 1.5em;
         height: 100%;
@@ -85,99 +85,99 @@
 
 
 
-   h1 {
-       background-size: 300px auto;
-       font-family: 'Varela Round', sans-serif;
-       margin: 0px;
-       text-align: center;
-       font-weight: 200;
-       font-size: 3.2em;
-       line-height: 1.1em;
-       color: #000;
-   }
+ h1 {
+     background-size: 300px auto;
+     font-family: 'Varela Round', sans-serif;
+     margin: 0px;
+     text-align: center;
+     font-weight: 200;
+     font-size: 3.2em;
+     line-height: 1.1em;
+     color: #000;
+ }
 
-   h2 {
-       font-family: 'Varela Round', sans-serif;
-       font-weight: 200;
-       font-size: 1.8em;
-       margin-top: 50px;
-       line-height: 1.1em;
-   }
+ h2 {
+     font-family: 'Varela Round', sans-serif;
+     font-weight: 200;
+     font-size: 1.8em;
+     margin-top: 50px;
+     line-height: 1.1em;
+ }
 
-   h3 {
-       font-family: 'Varela Round', sans-serif;
-       font-weight: 150;
-       font-size: 1.4em;
-       margin-top: 50px;
-       line-height: 2.0em;
-   }
+ h3 {
+     font-family: 'Varela Round', sans-serif;
+     font-weight: 150;
+     font-size: 1.4em;
+     margin-top: 50px;
+     line-height: 2.0em;
+ }
 
-   h4 {
-       font-family: 'Varela Round', sans-serif;
-       font-weight: 500;
-       font-size: 1.1em;
-   }
+ h4 {
+     font-family: 'Varela Round', sans-serif;
+     font-weight: 500;
+     font-size: 1.1em;
+ }
 
-   strong {
-       font-weight: 600;
-   }
+ strong {
+     font-weight: 600;
+ }
 
-   b {
-       font-weight: 500;
-       color: white;
-   }
+ b {
+     font-weight: 500;
+     color: white;
+ }
 
-   a {
-       color: #6ea3f4;
-       text-decoration: none;
-   }
+ a {
+     color: #6ea3f4;
+     text-decoration: none;
+ }
 
-   blockquote {
-       margin: 0;
-       padding: 10px 20px;
-       background-color: #1A1A1A;
-       border-radius: 16px;
-       color: white;
-   }
+ blockquote {
+     margin: 0;
+     padding: 10px 20px;
+     background-color: #1A1A1A;
+     border-radius: 16px;
+     color: white;
+ }
 
-   .subtitle p {
-       font-family: 'Varela Round', sans-serif;
-       font-weight: 400;
-       font-size: 1.3em;
-   }
+ .subtitle p {
+     font-family: 'Varela Round', sans-serif;
+     font-weight: 400;
+     font-size: 1.3em;
+ }
 
 
 
-   .blankIcon {
-       border-radius: 25%;
-       background-color: #EFEFEF;
-   }
+ .blankIcon {
+     border-radius: 25%;
+     background-color: #EFEFEF;
+ }
 
-   .blankScreenshot {
-       border-radius: 8px;
-       background-color: #EFEFEF;
-   }
+ .blankScreenshot {
+     border-radius: 8px;
+     background-color: #EFEFEF;
+ }
 
-   .container {
-       width: 100%;
-       margin: auto;
-   }	
+ .container {
+     width: 100%;
+     margin: auto;
+ }	
 
-   .containerLeft {
-       width: 100%;
-       float: left;
-   }
+ .containerLeft {
+     width: 100%;
+     float: left;
+ }
 
-   .containerRight {
-       width: 100%;
-       float: left;
-   }
+ .containerRight {
+     width: 100%;
+     float: left;
+ }
 
-   img {
-       margin-left: 0;
-   }
+ img {
+     margin-left: 0;
+ }
 
-   .screenshot {
+ .screenshot {
     border-radius: 8px;
     width: 100%;
 
@@ -188,7 +188,7 @@
 }
 
 @media only screen and (min-width: 690px) {
-   .containerLeft {
+ .containerLeft {
     width: 50%;
 
     float: left;
@@ -212,7 +212,7 @@ img {
 }
 
 footer {
-   color: #b4b5b7;
+ color: #b4b5b7;
 }
 
 .link-circle-container {
@@ -848,7 +848,7 @@ body {
                 </div>
                 <div class="bookshlf-position-card">
                     <h4>Position</h4>
-                    <p>Lead iOS and Backend Developer (March 2019 - Present)</p>
+                    <p>iOS and Backend Developer (March 2019 - Present)</p>
                 </div>
                 <a href="https://apps.apple.com/us/app/bookshlf-media-worth-sharing/id1486641946?mt=8" class="bookshlf-appstore"></a>
             </div>
@@ -954,64 +954,64 @@ body {
                 </div>
                 <center>
                     <p>
-                       <blockquote style="margin-right: 10px;">
-                          A watershed app that gathers data about movies and TV from across the internet into a single easily digested feed. Spend less time looking and more time watching.
-                          <br/><br/><a href="https://itunes.apple.com/us/app/queued-movie-and-tv-watchlist/id1445325036?ls=1&mt=8">View on App Store</a>
-                      </blockquote>
-                  </p>
-              </center>
-              <div class="app-collapse-space"></div>
-          </div>
-
-          <div class="containerRight">
-            <div class="app-title-card">
-                <div style="flex: 0 0 80px;">
-                    <img src="./BASDEcho.png" width="80" height="80" style="border-radius: 20px;"></img>
-                </div>
-                <div style="flex: 1; margin-left: 5%; align-self: center;">
-                    <p class="name app-title">BASD Echo</p>
-                </div>
-            </div>
-            <div>
-                <img class="screenshot" src="./BASDEchoScreenshot.jpg"/>
-            </div>
-            <center>
-                <p>
-                   <blockquote>
-                      The school newspaper reimagined. Currently available on the App Store with new issues every monday.
-                      <br/><br/><a href="https://echo.basd.k12.pa.us/">Website</a>
-                      <br/><a href="https://itunes.apple.com/us/app/basd-echo/id1438468307?ls=1&mt=8">View on App Store</a>
+                     <blockquote style="margin-right: 10px;">
+                      A watershed app that gathers data about movies and TV from across the internet into a single easily digested feed. Spend less time looking and more time watching.
+                      <br/><br/><a href="https://itunes.apple.com/us/app/queued-movie-and-tv-watchlist/id1445325036?ls=1&mt=8">View on App Store</a>
                   </blockquote>
               </p>
           </center>
           <div class="app-collapse-space"></div>
       </div>
-  </div>
 
-  <div class="container">
-      <div class="containerLeft">
+      <div class="containerRight">
         <div class="app-title-card">
             <div style="flex: 0 0 80px;">
-                <img src="./RequestRobin.png" width="80" height="80" style="border-radius: 25px;"></img>
+                <img src="./BASDEcho.png" width="80" height="80" style="border-radius: 20px;"></img>
             </div>
             <div style="flex: 1; margin-left: 5%; align-self: center;">
-                <p class="name app-title">STAP Tickets</p>
+                <p class="name app-title">BASD Echo</p>
             </div>
         </div>
         <div>
-            <img class="screenshot" src="./RequestRobinScreenshot.png"/>
+            <img class="screenshot" src="./BASDEchoScreenshot.jpg"/>
         </div>
         <center>
             <p>
-                <blockquote style="margin-right: 10px;">
-                  A fullscale client for Request Tracker, seemlessly integrates with google groups to provide a smooth and effective workplace ticketing system.
-                  <br/><br/><a href="https://itunes.apple.com/us/app/stap-tickets/id1244763348?ls=1&mt=8">View on App Store</a>
-              </blockquote>
-          </p>
-      </center>
-      <div class="app-collapse-space"></div>
-  </div>
-  <div class="containerRight">
+             <blockquote>
+              The school newspaper reimagined. Currently available on the App Store with new issues every monday.
+              <br/><br/><a href="https://echo.basd.k12.pa.us/">Website</a>
+              <br/><a href="https://itunes.apple.com/us/app/basd-echo/id1438468307?ls=1&mt=8">View on App Store</a>
+          </blockquote>
+      </p>
+  </center>
+  <div class="app-collapse-space"></div>
+</div>
+</div>
+
+<div class="container">
+  <div class="containerLeft">
+    <div class="app-title-card">
+        <div style="flex: 0 0 80px;">
+            <img src="./RequestRobin.png" width="80" height="80" style="border-radius: 25px;"></img>
+        </div>
+        <div style="flex: 1; margin-left: 5%; align-self: center;">
+            <p class="name app-title">STAP Tickets</p>
+        </div>
+    </div>
+    <div>
+        <img class="screenshot" src="./RequestRobinScreenshot.png"/>
+    </div>
+    <center>
+        <p>
+            <blockquote style="margin-right: 10px;">
+              A fullscale client for Request Tracker, seemlessly integrates with google groups to provide a smooth and effective workplace ticketing system.
+              <br/><br/><a href="https://itunes.apple.com/us/app/stap-tickets/id1244763348?ls=1&mt=8">View on App Store</a>
+          </blockquote>
+      </p>
+  </center>
+  <div class="app-collapse-space"></div>
+</div>
+<div class="containerRight">
     <div class="app-title-card">
         <div style="flex: 0 0 80px;">
             <img src="./GameBuzzer.png" width="80" height="80" style="border-radius: 20px;"></img>
@@ -1025,13 +1025,13 @@ body {
     </div>
     <center>
         <p>
-           <blockquote>
-              Friend Game Buzzer is the perfect app to manage your next trivia night. One person can host up to 64 other contestants who can buzz in during questions. Currently has over <b>70k</b> downloads!
-              <br/><br/><a href="https://itunes.apple.com/us/app/friend-game-buzzer/id1303196209?ls=1&mt=8">View on App Store</a>
-          </blockquote>
-      </p>
-  </center>
-  <div class="app-collapse-space"></div>
+         <blockquote>
+          Friend Game Buzzer is the perfect app to manage your next trivia night. One person can host up to 64 other contestants who can buzz in during questions. Currently has over <b>70k</b> downloads!
+          <br/><br/><a href="https://itunes.apple.com/us/app/friend-game-buzzer/id1303196209?ls=1&mt=8">View on App Store</a>
+      </blockquote>
+  </p>
+</center>
+<div class="app-collapse-space"></div>
 </div>
 </div>
 
