Added nasa & tendies

--- a/index.html
+++ b/index.html
@@ -775,7 +775,6 @@ body {
     <div class="white-header"></div>
     <div class="header-container">
         <div class="profile-img-container" style="display: none;">
-            <img class="profile" src="./Profile.jpg" />
         </div>
         <div class="real-name-container">
             <h1>Aaron Kovacs</h1>
@@ -818,7 +817,6 @@ body {
                 <img src="./gwu.png"/>
             </div>
             <div style="flex: 1;  align-self: center; margin-left: 5%;">
-                <p class="name college-card-pretitle">In-Progress</p>
                 <p class="name college-card-title" style="">B.S. Computer Science 2023</p>
                 <p class="name college-card-subtitle">The George Washington University</p>
             </div>
@@ -826,6 +824,48 @@ body {
         </div>
 
         <div style="margin-top: 3em;"></div>
+
+        <div class="bookshlf-container">
+            <div style="flex: 0 0 50%; height: 100%;">
+                <img src="./TendiesScreenshot.png" class="bookshlf-screenshot" style="border: 1px solid #555;" />
+            </div>
+
+            <div class="title-card">
+                <div style="display: flex;">
+                    <div style="flex: 0 0 80px;">
+                        <img src="./Tendies.png" width="80" height="80" style="border-radius: 20px;"></img>
+                    </div>
+                    <div style="flex: 1; margin-left: 5%; align-self: center;">
+                        <p class="name bookshlf-large-title">Tendies</p>
+                        <p class="name bookshlf-large-subtitle">Professional Investing Tools</p>
+                    </div>
+                </div>
+                <div class="bookshlf-quote-card">
+                    <p>Professional tools for any investor. Comprehensive options flow, earnings calendar, holders' list and research all in one app, and all for free.</p>
+                </div>
+                <div class="bookshlf-position-card">
+                    <h4>Position</h4>
+                    <p>Senior Software Engineer (April 2021 - Present)</p>
+                </div>
+                <a href="https://apps.apple.com/us/app/tendies/id1519084582" class="bookshlf-appstore"></a>
+            </div>
+
+        </div>
+
+        <div style="margin-top: 5em;"></div>
+
+        <div class="vytality-card">
+            <div style="flex: 0 0 30%; height: 100%;">
+                <img src="./nasa.png"/>
+            </div>
+            <div style="flex: 1;  align-self: center; margin-left: 5%;">
+                <p class="name" style="font-weight: 1000; font-size: 18pt;">NASA Goddard Space Flight Center</p>
+                <p class="name" style="font-weight: 300; font-size: 14pt;">Internship June 2021 - August 2021 </p>
+            </div>
+        </div>
+   
+
+        <div style="margin-top: 5em;"></div>
 
         <div class="bookshlf-container">
             <div style="flex: 0 0 50%; height: 100%;">
@@ -848,7 +888,7 @@ body {
                 </div>
                 <div class="bookshlf-position-card">
                     <h4>Position</h4>
-                    <p>iOS and Backend Developer (March 2019 - Present)</p>
+                    <p>iOS and Backend Developer (March 2019 - April 2021)</p>
                 </div>
                 <a href="https://apps.apple.com/us/app/bookshlf-media-worth-sharing/id1486641946?mt=8" class="bookshlf-appstore"></a>
             </div>
@@ -1040,7 +1080,7 @@ body {
 </body>
 <footer style="color: white; margin-top: 5em; margin-bottom: 5em;">
 	<center>
-		2022 Aaron Kovacs All Rights Reserved
+		2023 Aaron Kovacs All Rights Reserved
 	</center>
 </footer>
 </html>
