--- a/index.html
+++ b/index.html
@@ -253,7 +253,8 @@
                     <p>
                        <blockquote style="margin-right: 10px;">
                           A watershed app that gathers data about movies and TV from across the internet into a single easily digested feed. Spend less time looking and more time watching.
-                          <br/><br/><a href="https://itunes.apple.com/us/app/queued-movie-and-tv-watchlist/id1445325036?ls=1&mt=8">View on App Store</a>
+                          <br/>
+                          <a href="https://itunes.apple.com/us/app/queued-movie-and-tv-watchlist/id1445325036?ls=1&mt=8" class="bookshlf-appstore"></a>
                       </blockquote>
                   </p>
               </center>
@@ -275,9 +276,9 @@
             <center>
                 <p>
                    <blockquote>
-                      The school newspaper reimagined. Currently available on the App Store with new issues every monday.
-                      <br/><br/><a href="https://echo.basd.k12.pa.us/">Website</a>
-                      <br/><a href="https://itunes.apple.com/us/app/basd-echo/id1438468307?ls=1&mt=8">View on App Store</a>
+                      The school newspaper reimagined. Currently available on the App Store with new issues every monday.<br/>
+                      <a href="https://echo.basd.k12.pa.us/">Website</a>
+                      <a href="https://itunes.apple.com/us/app/basd-echo/id1438468307?ls=1&mt=8" class="bookshlf-appstore"></a>
                   </blockquote>
               </p>
           </center>
@@ -302,7 +303,8 @@
             <p>
                 <blockquote style="margin-right: 10px;">
                   A fullscale client for Request Tracker, seemlessly integrates with google groups to provide a smooth and effective workplace ticketing system.
-                  <br/><br/><a href="https://itunes.apple.com/us/app/stap-tickets/id1244763348?ls=1&mt=8">View on App Store</a>
+                  <br/>
+                 <a href="https://itunes.apple.com/us/app/stap-tickets/id1244763348?ls=1&mt=8" class="bookshlf-appstore"></a>
               </blockquote>
           </p>
       </center>
@@ -324,7 +326,8 @@
         <p>
            <blockquote>
               Friend Game Buzzer is the perfect app to manage your next trivia night. One person can host up to 64 other contestants who can buzz in during questions. Currently has over <b>70k</b> downloads!
-              <br/><br/><a href="https://itunes.apple.com/us/app/friend-game-buzzer/id1303196209?ls=1&mt=8">View on App Store</a>
+              <br/>
+              <a href="https://itunes.apple.com/us/app/friend-game-buzzer/id1303196209?ls=1&mt=8" class="bookshlf-appstore"></a>
           </blockquote>
       </p>
   </center>
