--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
                 <div class="disaster-consult-position">
                     <h4>Position</h4>
-                    <p>Backend Developer (2020-Present)</p>
+                    <p>Backend Developer (May - December 2020)</p>
                 </div>
             </div>
 
