Update hatchet time

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             </div>
             <div style="flex: 1;  align-self: center; margin-left: 5%;">
                 <a href="https://gwhatchet.com"><p class="name" style="font-weight: 1000; font-size: 18pt; colo">The GW Hatchet</p></a>
-                <p class="name" style="font-weight: 300; font-size: 14pt;">Web Developer (2019-Present)</p>
+                <p class="name" style="font-weight: 300; font-size: 14pt;">Web Developer (2019-2022)</p>
             </div>
         </div>
 
